// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineUL does not render null children 1`] = `
<div
  className="__InlineList__ di"
>
  <ul
    className="separate-items-with-comma"
  >
    <li
      key=".0"
    />
    <li
      key=".1"
    >
      <div>
        Second div
      </div>
    </li>
  </ul>
</div>
`;

exports[`InlineUL renders children seperated by default 1`] = `
<div
  className="__InlineList__"
>
  <ul
    className="separate-items-with-comma"
  >
    <li
      key=".0"
    >
      <div>
        First div
      </div>
    </li>
    <li
      key=".1"
    >
      <div>
        Second div
      </div>
    </li>
  </ul>
</div>
`;

exports[`InlineUL renders children with class 1`] = `
<div
  className="__InlineList__ di"
>
  <ul
    className="separate-items-with-comma"
  >
    <li
      key=".0"
    >
      <div>
        First div
      </div>
    </li>
    <li
      key=".1"
    >
      <div>
        Second div
      </div>
    </li>
  </ul>
</div>
`;

exports[`InlineUL renders with separateItemsClassName passed 1`] = `
<div
  className="__InlineList__"
>
  <ul
    className="separate-items-with-middledot"
  >
    <li
      key=".0"
    >
      <div>
        First div
      </div>
    </li>
    <li
      key=".1"
    >
      <div>
        Second div
      </div>
    </li>
  </ul>
</div>
`;
